--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,7 @@ body {
 
 /* headings and logo */
 
-h1,
-h2 {
+h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -36,8 +35,7 @@ h2 {
     float: right;
 }
 
-#menu,
-#logo {
+#menu, #logo {
     line-height: 75px;
 }
 
@@ -70,8 +68,7 @@ h2 {
     position: relative;
 }
 
-#cover-text,
-#cover-text h2 {
+#cover-text, #cover-text h2 {
     color: #fff;
 }
 
@@ -182,7 +179,7 @@ hr {
     width: 300px;
     height: 300px;
     padding: 30px;
-    border: solid #cccccc 1px;
+    border: solid #ccc 1px;
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -196,7 +193,8 @@ hr {
 /* events time */
 
 #times {
-    background: url('../images/dublin-city.webp') no-repeat;
+    background-image: url('../images/dublin-city.webp');
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -229,7 +227,7 @@ footer {
     text-align: center;
 }
 
-.social-networks>li {
+.social-networks > li {
     display: inline;
 }
 
@@ -241,6 +239,7 @@ footer {
 }
 
 /* gallery */
+
 #photos {
     clear: both;
     line-height: 0;
@@ -249,7 +248,7 @@ footer {
 
 }
 
-#photos>img {
+#photos > img {
     width: 100%;
 }
 
@@ -265,7 +264,7 @@ footer {
 
     #welcome {
         padding: 30px 0;
-        margin: 0 auto;
+        margin: 0;
     }
 
     #left-about, #right-about {
@@ -281,6 +280,13 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
@@ -288,7 +294,7 @@ footer {
 }
 
 /* For medium screen sizes from 950px wide and down */
-@media screen and (max-width:950px) {
+@media screen and (max-width: 950px) {
     
     #menu {
         clear: left;
